# democap

./: .gitignore  CONTRIBUTING.md  README.md  bootstrap.py  make_cleaned.py  pyproject.toml  requirements.txt
config/: default.yaml  tools_catalog.yaml
coursecap/: README.md  assemble.py  recorder.py  tts.py
coursecap/lessons/: lesson_1_1.json  lesson_1_1_screenshare.json
democap/: __init__.py  cli.py  config.py  course_splitter.py  decision.py  demo_intent.py  docx_parser.py  models.py  obs_control.py  obs_setup.py  orchestrator.py  readiness.py  segmenter.py  step_extractor.py  tool_detector.py
democap/executor/: __init__.py  browser_exec.py  browser_session.py  desktop_exec.py
democap/platform/: __init__.py  macos.py  windows.py
democap/recorder/: __init__.py  base.py  encode.py  ffmpeg_rec.py  obs_rec.py  playwright_rec.py
docs/: RECORDING_NOTES.md  WINDOWS.md
samples/: parsed_steps.example.json  parsed_steps.schema.json  sample_script.docx
